--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crosscheck-cash",
   "productName": "CrossCheck CASH",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "CrossCheck CASH Application",
   "main": "electron/main.js",
   "scripts": {
@@ -51,7 +51,8 @@
   },
   "devDependencies": {
     "electron": "^28.1.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.9.1",
+    "electron-log": "^5.1.0"
   },
   "dependencies": {
     "electron-updater": "^6.1.7"
