--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
   },
   "devDependencies": {
     "electron": "^28.1.0",
-    "electron-builder": "^24.9.1",
-    "electron-log": "^5.1.0"
+    "electron-builder": "^24.9.1"
   },
   "dependencies": {
+    "electron-log": "^5.1.0",
     "electron-updater": "^6.1.7"
   }
 }
