--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crosscheck-cash",
   "productName": "CrossCheck CASH",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "CrossCheck CASH Application",
   "main": "electron/main.js",
   "scripts": {
@@ -44,8 +44,7 @@
       {
         "provider": "github",
         "owner": "Fr1z1ck",
-        "repo": "crosscheck-cash",
-        "releaseType": "release"
+        "repo": "crosscheck-cash"
       }
     ]
   },
