--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "crosscheck-cash",
   "productName": "CrossCheck CASH",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "CrossCheck CASH Application",
   "main": "electron/main.js",
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
     "pack": "electron-builder --dir",
+    "predist": "node electron/update-version.js",
     "dist": "electron-builder",
+    "prepublish": "node electron/update-version.js",
     "publish": "electron-builder -p always",
     "postinstall": "electron-builder install-app-deps"
   },
